--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@ h1{
 h1.italic {
   color: black;
   text-align: center;
-  font-family: 'Palanquin Dark', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: ;
   font-style: oblique;
 }
