--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,7 @@
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
 <style>
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 body {
     background-image: url("space-wallpaper.jpg");
 }
