--- a/mars_mission.html
+++ b/mars_mission.html
@@ -72,7 +72,7 @@ p {
 .header{
     width: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background-color: #A55D35;
+    background-color: #DE8E21;
     text-align: center;
 }
 .container2{
@@ -229,13 +229,26 @@ div.tab button.active {
     from {opacity: 0;}
     to {opacity: 1;}
 }
+.logo-container {
+  float: left;
+  width: 150px;
+  height: 150px;
+  position: left;
+  margin: auto;
+}
 </style>
 </head>
 <body>
   <div data-role="page" id="pageone">
     <div class="header">
       <div class="container2">
-        <h1 class="italic">Mars Missions</h1>
+        <div class="logo">
+        </div>
+        <div class="logo-container">
+          <img src="MTMLogo.png" style="width:100%" />
+        </div>
+        <h1 class="italic">The Mission to Mars!</h1>
+        <h2 class="italic">It's Just the Beginning!</h2>
       </div>
     </div>
     <div data-role="navbar">
@@ -256,14 +269,20 @@ div.tab button.active {
     </div>
 
     <div class="mySlides fade" id="slide2">
-      <img src="space-wallpaper.jpg" style="width:100%">
-      <div class="caption">The Age of Private Space Exploration <a href="#" class="ui-btn ui-btn-inline ui-icon-carat-r ui-btn-icon-notext ui-corner-all ui-shadow ui-alt-icon">Black icon</a>
+      <img src="MarsBlueSpot.jpg" style="width:100%">
+      <div class="caption">Blue spots on Mars. Could it be water bodies?
       </div>
     </div>
 
     <div class="mySlides fade" id="slide3">
       <img src="marsmission.jpg" style="width:100%">
-      <div class="caption">Mars Missions <a href="#" class="ui-btn ui-btn-inline ui-icon-carat-r ui-btn-icon-notext ui-corner-all ui-shadow ui-alt-icon">Black icon</a>
+      <div class="caption">Mars Missions
+      </div>
+    </div>
+
+    <div class="mySlides fade" id="slide3">
+      <img src="mars-drilling.jpg" style="width:100%">
+      <div class="caption">Curiosity drills into Martian surface
       </div>
     </div>
 
@@ -289,14 +308,14 @@ div.tab button.active {
           <h3>Mars Exploration</h3>
           <p>NASA has sent many missions to Mars in order to research its hidden’ scientific secrets including its geology and evidence of possible life.  Among those missions is the Mars Rover missions sent in 2003.  In fact, two rovers were sent in the year 2003.  On June 10 of 2003, the Spirit rover was launched on the Delta II rocket.  In that same year, Spirit's twin, Opportunity was launched on July 7. Both rovers were designed to analyze Mar’s surface and the chemistry of the rocks around.  It was programmed to look for life forms and break rocks down into simpler parts.  These rovers are part of NASA’s long-term Mars Exploration Program to deploy robotic exploration of Mars’ martian surface.  One of the scientific goals the rover missions are trying to accomplish is searching and characterizing a wide range of rocks which can show evidence of water and early life.  The rover technology includes panoramic cameras which determine the mineralogy and the texture of Mars’ terrain, microscopic cameras for close-up, high-resolution images of rocks, and magnets to take samples of magnetic dust on the surface. </p>
           <br>
-          <a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>
+          <!--<a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>-->
         </div>
 
         <div id="Maven" class="tabcontent">
           <h3>MAVEN</h3>
           <p>NASA’s Mars Atmosphere and Volatile Evolution mission, MAVEN, was launched on November 18, 2013 and it reached Mars on the night of September 21, 2014.  This mission was designed to analyze the Red planet’s surface in order to piece together its past and determine how it may have changed from a wet world into a dry planet.  The 671 million dollar project will investigate Mars’ upper atmosphere, ionosphere and solar winds which allows it to focus on why and how the planet lost most of its atmosphere and liquid water.  Scientists can use the data provided by MAVEN to understand its loss of volatile compounds and give insight into its climate and planetary habitability.</p>
           <br>
-          <a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>
+          <!--<a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>-->
         </div>
           <br>
         </div>
@@ -316,7 +335,7 @@ div.tab button.active {
         <h2 class="italic">Mars' Conditions</h1>
         <p>Conditions on Mars are very rough, and there can be many challenges when it comes to staying on Mars for an extended period of time. The biggest challenge with living on Mars is the atmosphere, which is supposed to provide oxygen for organisms to survive and block out harmful rays from the sun. However, the atmosphere of Mars is 200 times thinner than Earth’s atmosphere.  This shows the reason Mars does not have essential compounds including water, nitrogen, and carbon dioxide.  Another obstacle that people would have to face would be the climate of Mars. Powerful dust storms sweep the surface of the planet, which could pose problems for colonization on Mars. Additionally, temperatures on Mars average approximately -50 degrees Celsius. Harmful radiation is yet another problem. While it is not a problem over short periods of time, long-term exposure can lead to some serious health problems.</p>
         <br>
-        <a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>
+        <!--<a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>-->
         <br>
     </div>
   </div>
@@ -341,7 +360,7 @@ div.tab button.active {
       <br>
       <h3>China</h3>
       <p>Recently, China says that it hopes to send its first successful mission to mars.  Many of its missions to mars were failures in the past, however, the Chinese space Program now says that it has all that it needs to send a mission to the red planet.  Its mission includes two parts, a mars rover, and an orbiter to analyze atmospheric conditions.</p>
-      <a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>
+      <!--<a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>-->
     </div>
       <br>
     </div>
