added links and interviews

--- a/interview.html
+++ b/interview.html
@@ -262,11 +262,11 @@ div.tab button.active {
     </div>
     <div data-role="navbar">
       <ul>
-        <li><a href="" class="ui-btn ui-icon-home ui-btn-icon-left">Home</a></li>
-        <li><a href="" class="ui-btn ui-icon-info ui-btn-icon-left">Mars Missions</a></li>
-        <li><a href="" class="ui-btn ui-icon-location ui-btn-icon-left">Space Exploration</a></li>
-        <li><a href="" class="ui-btn ui-icon-location ui-btn-icon-left">Interviews</a></li>
-        <li><a href="" class="ui-btn ui-icon-info ui-btn-icon-left">About Us</a></li>
+        <li><a href="index.html" class="ui-btn ui-icon-home ui-btn-icon-left">Home</a></li>
+        <li><a href="mars_mission.html" class="ui-btn ui-icon-info ui-btn-icon-left">Mars Missions</a></li>
+        <li><a href="space_exploration.html" class="ui-btn ui-icon-location ui-btn-icon-left">Space Exploration</a></li>
+        <li><a href="interview.html" class="ui-btn ui-icon-location ui-btn-icon-left">Interview</a></li>
+        <li><a href="about_us.html" class="ui-btn ui-icon-info ui-btn-icon-left">About Us</a></li>
 
       </ul>
     </div>
@@ -276,20 +276,22 @@ div.tab button.active {
           <h2 class="italic">Our Interviews</h2>
           <div class="tab">
           <button class="tablinks" onclick="openTab(event, 'interview1')">Interview with Mr. Brett Streetman</button>
+          <iframe src="https://drive.google.com/file/d/0B6UPWz8XtjjubU5MVTk5ZFl4bVE/preview" width="640" height="480"></iframe>
           <button class="tablinks" onclick="openTab(event, 'interview2')">Interview with Ms. Elaine E. Seasly</button>
+          <iframe src="https://drive.google.com/file/d/0B6UPWz8XtjjuX2Y1MTNOMnp1cDQ/preview" width="640" height="480"></iframe>
         </div>
 
-        <div id="interview1" class="tabcontent">
+        <!--<div id="interview1" class="tabcontent">
           <h3>Interview with Mr. Brett Streetman</h3>
-          <!--Put video here -->
+          Put video here
           <br>
 
         </div>
 
         <div id="interview2" class="tabcontent">
-          <h3>Interview with Ms. Elaine E. Seasly</h3
-            <!-- pul audio link here-->
+          <h3>Interview with Ms. Elaine E. Seasly</h3>
+            put audio link here
             <br>
-        </div>
+        </div>-->
 </body>
 </html>
