--- a/mars_mission.html
+++ b/mars_mission.html
@@ -253,11 +253,11 @@ div.tab button.active {
     </div>
     <div data-role="navbar">
       <ul>
-        <li><a href="" class="ui-btn ui-icon-home ui-btn-icon-left">Home</a></li>
-        <li><a href="" class="ui-btn ui-icon-info ui-btn-icon-left">Mars Missions</a></li>
-        <li><a href="" class="ui-btn ui-icon-location ui-btn-icon-left">Space Exploration</a></li>
-        <li><a href="" class="ui-btn ui-icon-location ui-btn-icon-left">Interview</a></li>
-        <li><a href="" class="ui-btn ui-icon-info ui-btn-icon-left">About Us</a></li>
+        <li><a href="index.html" class="ui-btn ui-icon-home ui-btn-icon-left">Home</a></li>
+        <li><a href="mars_mission.html" class="ui-btn ui-icon-info ui-btn-icon-left">Mars Missions</a></li>
+        <li><a href="space_exploration.html" class="ui-btn ui-icon-location ui-btn-icon-left">Space Exploration</a></li>
+        <li><a href="interview.html" class="ui-btn ui-icon-location ui-btn-icon-left">Interview</a></li>
+        <li><a href="about_us.html" class="ui-btn ui-icon-info ui-btn-icon-left">About Us</a></li>
 
       </ul>
     </div>
