--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta charset="utf-8">
 <style>
 @import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Oxygen');
 body {
     background-image: url("space-wallpaper.jpg");
 }
@@ -33,13 +34,13 @@ h1.italic {
 h2.italic {
   color: black;
   text-align: center;
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-family: 'Oxygen', sans-serif;
   font-style: italic;
 }
 p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
-  width: 1272px;
+  width: auto;
   padding: 10px;
   border: 5px solid gray;
   margin: 0;
@@ -72,7 +73,7 @@ p {
 .header{
     width: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background-color: #A55D35;
+    background-color: #DE8E21;
     text-align: center;
 }
 .container2{
@@ -81,81 +82,198 @@ p {
 li{
   font-family: "Times New Roman", Times, serif;
 }
+.slider{
+    width: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: #A55D35;
+    text-align: center;
+}
+.container3{
+    padding: 10px;
+}
+.inline{
+    display: inline-block;
+    display: inline;
+}
+* {box-sizing:border-box}
+body {font-family: Verdana,sans-serif;}
+.mySlides {
+  display:none;
+  padding: 1px;
+  border: 2px solid black;
+  margin: 0;
+}
 
+/* Slideshow container */
+.slideshow-container {
+  width: auto;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.caption {
+  color: #f2f2f2;
+  background-color: transparent;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+  display: inline-block;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 13px;
+  width: 13px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+.logo-container {
+  float: left;
+  width: 150px;
+  height: 150px;
+  position: left;
+  margin: auto;
+}
 </style>
 </head>
 <body>
   <div data-role="page" id="pageone">
     <div class="header">
       <div class="container2">
+        <div class="logo">
+        </div>
+        <div class="logo-container">
+          <img src="MTMLogo.png" style="width:100%" />
+        </div>
         <h1 class="italic">The Mission to Mars!</h1>
         <h2 class="italic">It's Just the Beginning!</h2>
       </div>
     </div>
     <div data-role="navbar">
       <ul>
-        <li><a href="" class="ui-btn ui-icon-home ui-btn-icon-left">Home</a></li>
-        <li><a href="" class="ui-btn ui-icon-location ui-btn-icon-left">Space Facilities Around America</a></li>
-        <li><a href="" class="ui-btn ui-icon-calendar ui-btn-icon-left">Space Program Timeline</a></li>
-        <li><a href="" class="ui-btn ui-icon-info ui-btn-icon-left">About Us</a></li>
+        <li><a href="index.html" class="ui-btn ui-icon-home ui-btn-icon-left">Home</a></li>
+        <li><a href="mars_mission.html" class="ui-btn ui-icon-info ui-btn-icon-left">Mars Missions</a></li>
+        <li><a href="space_exploration.html" class="ui-btn ui-icon-location ui-btn-icon-left">Space Exploration</a></li>
+        <li><a href="interview.html" class="ui-btn ui-icon-location ui-btn-icon-left">Interview</a></li>
+        <li><a href="about_us.html" class="ui-btn ui-icon-info ui-btn-icon-left">About Us</a></li>
+
       </ul>
     </div>
-    <div class="image">
+    <div class="slideshow-container">
+
+    <div class="mySlides fade" id="slide1">
+      <img src="spac1.jpg" style="width:100%">
+      <div class="caption">Welcome To The Mission to Mars! Here we will take you on an exclusive journey into the future of space exploration!</div>
     </div>
-    <div data-role="main" class="ui-content">
-      <div class="imu">
-        <div class="container">
-          <h2 class="italic">Age of Private Space Exploration</h2>
-          <p>Ever since the privatization of space exploration through a numerous amount of private space programs in 2004, many private space programs including SpaceX and
-          Virgin Galactic have pushed towards making the future of space travel more efficient and effective.  Many of these private companies, significantly SpaceX, have worked towards creating
-          vehicles and programs to transport equipment to the Space Station.  Just recently, many of these companies have anounced the possibility of having travel to Mars.
-          SpaceX's CEO, Elon Musk is determined to do the unbelievable, put a man on Mars by 2020 and colonize the red planet.  we are witnessing a space race between many
-          succesful and resourceful companies.  With this being said, research for mars exploration, including potential weather patterns, possibilty of hydrogen and water deposits,
-          and how best to create suits for such explorationa nd protection from Mars' extreme conditions is taking place in labs across the nation.  Our nation is moving forward in the revolution to Mars and this vital journey is being powered by a plethora
-          of intelligent private compoanies.</p>
-          <a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>
-          <br>
-        </div>
+
+    <div class="mySlides fade" id="slide2">
+      <img src="bumper2.jpg" style="width:100%">
+      <div class="caption">Bumper 2 - Ambitious 2 stage rocket program - July 1950 <a href="#" class="ui-btn ui-btn-inline ui-icon-carat-r ui-btn-icon-notext ui-corner-all ui-shadow ui-alt-icon">Black icon</a>
       </div>
-      <br>
-    <div class="imu">
-      <div class="container">
-        <h2 class="italic">Where Are We At Right Now?</h1>
-        <p>The United States' space program, NASA first started in July 29, 1958. NASA has made significant history throughout the years with many unmanned and manned missions to space.
-        NASA made history on May 5th, 1961 when Alan Shepard was the first man into space.  With much confidence, NASA began to send orbital missions and Apollo missions to the moon.
-      On July 16, 1969, the United Staes atonished the world by putting a man on the moon.  NASA is a prestigious space program, the creator of Space Shuttles and moon walks.  It has been
-    a leader in space exploration in research to advance our knowledge of the universe. </p>
-        <a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>
-        <br>
+    </div>
+
+    <div class="mySlides fade" id="slide3">
+      <img src="Apollo.jpg" style="width:100%">
+      <div class="caption">Apollo 11 Mission <a href="#" class="ui-btn ui-btn-inline ui-icon-carat-r ui-btn-icon-notext ui-corner-all ui-shadow ui-alt-icon">Black icon</a>
       </div>
+    </div>
+
+    <div class="mySlides fade" id="slide4">
+      <img src="Enterprise_free_flight.jpg" style="width:100%">
+      <div class="caption">Enterprise - First Orbiter of the Space Shuttle System <a href="#" class="ui-btn ui-btn-inline ui-icon-carat-r ui-btn-icon-notext ui-corner-all ui-shadow ui-alt-icon">Black icon</a>
+      </div>
+    </div>
+
+    <div class="mySlides fade" id="slide5">
+      <img src="marsmission.jpg" style="width:100%">
+      <div class="caption">Mars Rover Missions <a href="#" class="ui-btn ui-btn-inline ui-icon-carat-r ui-btn-icon-notext ui-corner-all ui-shadow ui-alt-icon">Black icon</a>
+      </div>
+    </div>
+
+    <div class="mySlides fade" id="slide6">
+      <img src="falcon.jpg" style="width:100%">
+      <div class="caption">SpaceX Dragon Capsule and Falcon 9; 100% reusable by 2018 <a href="#" class="ui-btn ui-btn-inline ui-icon-carat-r ui-btn-icon-notext ui-corner-all ui-shadow ui-alt-icon">Black icon</a>
+      </div>
+    </div>
+
     </div>
     <br>
-    <div class="imu">
-      <div class="container">
-        <h2 class="italic">The Evolution of Space Vehicles</h1>
-        <p>Space vehicles have evolved over time and have taken different shape and form to help it perform better to defeat the force of gravity.  This first types of rockets used by the United States
-        to fulfill space exploration included the Jupiter C and Redstone rockets.  The Jupiter C was one of the first rockets which carried satelites into earth's atmosphere, and the Redtson Mercury rocket responsible
-      for carrying Alan Shepard, the first American into space.  Both of these rockets had central engines with 4 fins and a narrow fusealage for direct flight.  This was the beginiing stage of cutting edge technology.
-    Soon, NASA began to switch to Atlas rockets to send astronauts into orbit since these rockets were powerful to defeat extreme gravity and pressure.  This rocket was responsible for carrying John Glenn on an orbit around the
-  Earth.  After this came the race to the moon.  In order to fulfill such far distances, a more powerful rocket with a bigger engine was needed, and this was the Saturn V rocket, the rockets that carried astronauts on the Apollo missions.
-Space vehicles were getting better and better each day with new models being created. Soon NASA went above and beyond sending unmanned rockets to explore much of the solar system that humans have never seen before.</p>
-        <a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>
-        <br>
+
+    <div style="text-align:center">
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
     </div>
+
+    <div data-role="main" class="ui-content">
   </div>
-  <br>
-  <div class="imu2">
-    <div class="container">
-      <h2 class="italic">Possible Careers Involved</h1>
-      <ul>
-          <li><b>Pilots and Flight Crew Members</b></li>
-          <li><b>Astronomers, Chemist, Geologist, Physicist, Meteorologist, and Oceanographer</b></li>
-          <li><b>Computer Scientist, Mathematician, Statistician, Systems Analyst</b></li>
-          <li><b>Engineers and Technicians</b></li>
-          <li><b>Aircraft Designers</b></li>
-        </ul>
-      <a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">See Full List</a>
-      <br>
-    </div>
-  </div>
+
+<script>
+var slideIndex = 0;
+showSlides();
+
+function showSlides() {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    for (i = 0; i < slides.length; i++) {
+       slides[i].style.display = "none";
+    }
+    slideIndex++;
+    if (slideIndex> slides.length) {slideIndex = 1}
+    for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";
+    dots[slideIndex-1].className += " active";
+    setTimeout(showSlides, 6000); // Change image every 2 seconds
+}
+</script>
+</body>
 </html>
