--- a/about_us.html
+++ b/about_us.html
@@ -262,34 +262,29 @@ div.tab button.active {
     </div>
     <div data-role="navbar">
       <ul>
-        <li><a href="index.html" class="ui-btn ui-icon-home ui-btn-icon-left">Home</a></li>
-        <li><a href="mars_mission.html" class="ui-btn ui-icon-info ui-btn-icon-left">Mars Missions</a></li>
-        <li><a href="space_exploration.html" class="ui-btn ui-icon-location ui-btn-icon-left">Space Exploration</a></li>
-        <li><a href="interview.html" class="ui-btn ui-icon-location ui-btn-icon-left">Interview</a></li>
-        <li><a href="about_us.html" class="ui-btn ui-icon-info ui-btn-icon-left">About Us</a></li>
+        <li><a href="" class="ui-btn ui-icon-home ui-btn-icon-left">Home</a></li>
+        <li><a href="" class="ui-btn ui-icon-info ui-btn-icon-left">Mars Missions</a></li>
+        <li><a href="" class="ui-btn ui-icon-location ui-btn-icon-left">Space Exploration</a></li>
+        <li><a href="" class="ui-btn ui-icon-location ui-btn-icon-left">Interviews</a></li>
+        <li><a href="" class="ui-btn ui-icon-info ui-btn-icon-left">About Us</a></li>
 
       </ul>
     </div>
     <div data-role="main" class="ui-content">
       <div class="imu">
         <div class="container">
-          <h2 class="italic">About Us</h2>
-          <div class="tab">
-          <button class="tablinks" onclick="openTab(event, 'interview1')">Interview with Mr. Brett Streetman</button>
-          <button class="tablinks" onclick="openTab(event, 'interview2')">Interview with Ms. Elaine E. Seasly</button>
-        </div>
-
-        <div id="interview1" class="tabcontent">
-          <h3>Interview with Mr. Brett Streetman</h3>
-          <!--Put video here -->
+          <h2 class="italic">About US</h1>
+          <p>Welcome to our website! We are middle-schoolers from Henrico County, and we are pleased to show you our webpage. Our website mainly focuses on space exploration, and specifically the “Mission to Mars”. We specify certain agencies and corporations working on the Mars program, like NASA and SpaceX. Our website includes an interactive timeline, information about manned and unmanned space missions, two multimedia interviews with employees from NASA and Drapers Laboratory, career fields that NASA focuses on explicitly, and positive/negative impacts of space exploration. We appreciate this wonderful opportunity to enrich web development skills as well as researching skills.
+          </p>
           <br>
-
         </div>
-
-        <div id="interview2" class="tabcontent">
-          <h3>Interview with Ms. Elaine E. Seasly</h3
-            <!-- pul audio link here-->
-            <br>
+      </div>
+      <div class="imu">
+        <div class="container">
+          <h2 class="italic">Work Log</h1>
+          <iframe src="https://drive.google.com/file/d/0BxC-78BpbK1JZlZ5a3dFdC1OZHc/preview" width="1000" height="1000"></iframe>
+          <br>
         </div>
+      </div>
 </body>
 </html>
