--- a/space_exploration.html
+++ b/space_exploration.html
@@ -45,6 +45,9 @@ p {
   margin: 0;
   text-align: justify;
 }
+ul{
+  text-align: left;
+}
 .image
 {
     background:URL('spac1.jpg');
@@ -262,11 +265,11 @@ div.tab button.active {
     </div>
     <div data-role="navbar">
       <ul>
-        <li><a href="index.html" class="ui-btn ui-icon-home ui-btn-icon-left">Home</a></li>
-        <li><a href="mars_mission.html" class="ui-btn ui-icon-info ui-btn-icon-left">Mars Missions</a></li>
-        <li><a href="space_exploration.html" class="ui-btn ui-icon-location ui-btn-icon-left">Space Exploration</a></li>
-        <li><a href="interview.html" class="ui-btn ui-icon-location ui-btn-icon-left">Interview</a></li>
-        <li><a href="about_us.html" class="ui-btn ui-icon-info ui-btn-icon-left">About Us</a></li>
+        <li><a href="" class="ui-btn ui-icon-home ui-btn-icon-left">Home</a></li>
+        <li><a href="" class="ui-btn ui-icon-info ui-btn-icon-left">Mars Missions</a></li>
+        <li><a href="" class="ui-btn ui-icon-location ui-btn-icon-left">Space Exploration</a></li>
+        <li><a href="" class="ui-btn ui-icon-location ui-btn-icon-left">Interviews</a></li>
+        <li><a href="" class="ui-btn ui-icon-info ui-btn-icon-left">About Us</a></li>
 
       </ul>
     </div>
@@ -319,7 +322,7 @@ div.tab button.active {
           <h3>Virgin Galctic</h3>
           <p>Virgin Galactic’s main focus is creating the world’s first commercial spaceline where people can pay to go to the Moon or the International Space Station. Their vision of the future includes running a commercial and relatively inexpensive spaceline where space tourists can sightsee and explore the galaxy. In addition to providing space travel commercially, Virgin Galactic also provides space travel to students.</p>
           <br>
-          <a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>
+          <!--<a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>-->
         </div>
 
         <div id="bo" class="tabcontent">
@@ -328,6 +331,65 @@ div.tab button.active {
           <br>
           <!--<a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>-->
         </div>
+          <br>
+        </div>
+      </div>
+      <div class="imu">
+        <div class="container">
+          <h2 class="italic">Pros and Cons of Space Exploration</h2>
+          <div class="tab">
+          <button class="tablinks" onclick="openTab(event, 'pro')">Pros</button>
+          <button class="tablinks" onclick="openTab(event, 'con')">Cons</button>
+        </div>
+        <br>
+
+        <div id="pro" class="tabcontent">
+          <h3>The Pros</h3>
+            <ul>
+              <li>Increases knowledge about ourselves and our planet</li>
+              <li>Global warming can be diminished by finding another habitable world</li>
+              <li>By exploring deeper into space, we can create more interesting space stations like the Stanford torus</li>
+              <li>We can discover new elements and minerals that will for sure impact life on Earth</li>
+              <li>By exploring space, we can learn more about our planet and how to preserve it better</li>
+              <li>By developing more technology for space, we can improve how we connect on a global scale</li>
+              <li>By using satellites, we can predict when natural disasters can and are going to happen</li>
+              <li>When we explore more into space, we drive the need for better technology like smaller digital equipment and new forms of fuels</li>
+              <li>Increases global communication and cooperation</li>
+            </ul>
+          <br>
+          <!--<a href="" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Read More</a>-->
+        </div>
+
+        <div id="con" class="tabcontent">
+          <h3>The Cons</h3>
+          <ul>
+            <li>Fossil fuels are used in gasoline to create rocket fuel</li>
+            <li>Space exploration is very helpful, and will not likely help people on Earth who are starving or need help </li>
+            <li>Space travel is extremely dangerous and risky. The space shuttle Challenger exploded and killed astronauts in the 80s, proving that it risks human lives</li>
+            <li>If aliens are real, they could actually invade Earth and take our natural resources</li>
+            <li>Space junk is the waste humans leave in outer space. Since space has no decomposition process, it stays there forever</li>
+            <li>When something falls into Earth’s orbit, it may not disintegrate completely, creating danger for citizens. Radioactive material could also damage Earth</li>
+            <li>Space travel could be used in hostile intentions towards other countries</li>
+            <li>Since countries have the ability to spy on each other in space, there could be international tensions</li>
+            <li>Any resources found in space could belong to anyone</li>
+          </ul>
+        <br>
+        </div>
+<br>
+        <div class="imu2">
+          <div class="container">
+            <h2 class="italic">Possible Careers Involved</h1>
+            <ul>
+                <li><b>Pilots and Flight Crew Members</b></li>
+                <li><b>Astronomers, Chemist, Geologist, Physicist, Meteorologist, and Oceanographer</b></li>
+                <li><b>Computer Scientist, Mathematician, Statistician, Systems Analyst</b></li>
+                <li><b>Engineers and Technicians</b></li>
+                <li><b>Aircraft Designers</b></li>
+              </ul>
+            <br>
+          </div>
+        </div>
+
           <br>
         </div>
       </div>
