--- a/interview.html
+++ b/interview.html
@@ -111,14 +111,12 @@ body {font-family: Verdana,sans-serif;}
   border: 2px solid black;
   margin: 0;
 }
-
 /* Slideshow container */
 .slideshow-container {
   width: auto;
   position: relative;
   margin: auto;
 }
-
 /* Caption text */
 .caption {
   color: #f2f2f2;
@@ -131,7 +129,6 @@ body {font-family: Verdana,sans-serif;}
   text-align: center;
   display: inline-block;
 }
-
 .apanel {
   color: #f2f2f2;
   background-color: red;
@@ -143,7 +140,6 @@ body {font-family: Verdana,sans-serif;}
   text-align: center;
   display: inline-block;
 }
-
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
@@ -152,7 +148,6 @@ body {font-family: Verdana,sans-serif;}
   position: absolute;
   top: 0;
 }
-
 /* The dots/bullets/indicators */
 .dot {
   height: 13px;
@@ -163,11 +158,9 @@ body {font-family: Verdana,sans-serif;}
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-
 .active {
   background-color: #717171;
 }
-
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
@@ -175,29 +168,24 @@ body {font-family: Verdana,sans-serif;}
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
 @-webkit-keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
 }
-
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
 }
-
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
-
 /* For Info Tabs ---*/
 div.tab {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
 }
-
 /* Style the buttons inside the tab */
 div.tab button {
     background-color: inherit;
@@ -209,17 +197,14 @@ div.tab button {
     transition: 0.3s;
     font-size: 17px;
 }
-
 /* Change background color of buttons on hover */
 div.tab button:hover {
     background-color: #ddd;
 }
-
 /* Create an active/current tablink class */
 div.tab button.active {
     background-color: #ccc;
 }
-
 /* Style the tab content */
 .tabcontent {
     display: none;
@@ -227,13 +212,11 @@ div.tab button.active {
     -webkit-animation: fadeEffect 1s;
     animation: fadeEffect 1s;
 }
-
 /* Fade in tabs */
 @-webkit-keyframes fadeEffect {
     from {opacity: 0;}
     to {opacity: 1;}
 }
-
 @keyframes fadeEffect {
     from {opacity: 0;}
     to {opacity: 1;}
@@ -275,9 +258,8 @@ div.tab button.active {
         <div class="container">
           <h2 class="italic">Our Interviews</h2>
           <div class="tab">
-          <button class="tablinks" onclick="openTab(event, 'interview1')">Interview with Mr. Brett Streetman</button>
+          <button class="tablinks" onclick="openTab(event, 'interview1')">Interview with Mr. Brett Streetman and Ms. Elaine E. Seasly</button>
           <iframe src="https://drive.google.com/file/d/0B6UPWz8XtjjubU5MVTk5ZFl4bVE/preview" width="640" height="480"></iframe>
-          <button class="tablinks" onclick="openTab(event, 'interview2')">Interview with Ms. Elaine E. Seasly</button>
           <iframe src="https://drive.google.com/file/d/0B6UPWz8XtjjuX2Y1MTNOMnp1cDQ/preview" width="640" height="480"></iframe>
         </div>
 
@@ -285,9 +267,7 @@ div.tab button.active {
           <h3>Interview with Mr. Brett Streetman</h3>
           Put video here
           <br>
-
         </div>
-
         <div id="interview2" class="tabcontent">
           <h3>Interview with Ms. Elaine E. Seasly</h3>
             put audio link here
